<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/view_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <LinearLayout android:id="@+id/linearLayoutH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:orientation="horizontal">

            <Button android:id="@+id/btn_item1"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/item1"
                android:textSize="@dimen/btn_text_size_min"
                android:onClick="onPress"
                android:layout_gravity="center_vertical|center_horizontal">
            </Button>

            <Button android:id="@+id/btn_item2"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/item2"
                android:textSize="@dimen/btn_text_size_min"
                android:onClick="onPress"
                android:layout_gravity="center_vertical|center_horizontal">
            </Button>

            <Button android:id="@+id/btn_item3"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/item3"
                android:textSize="@dimen/btn_text_size_min"
                android:onClick="onPress"
                android:layout_gravity="center_vertical|center_horizontal">
            </Button>

            <Button android:id="@+id/btn_item4"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/item4"
                android:textSize="@dimen/btn_text_size_min"
                android:onClick="onPress"
                android:layout_gravity="center_vertical|center_horizontal">
            </Button>

            <Button android:id="@+id/btn_item5"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/item5"
                android:textSize="@dimen/btn_text_size_min"
                android:onClick="onPress"
                android:layout_gravity="center_vertical|center_horizontal">
            </Button>
        </LinearLayout>
    </HorizontalScrollView>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/view_top">
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_below="@+id/tabs"
        android:layout_above="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom">
        <TextView
            android:id="@+id/tv_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/margin_min"
            android:textSize="@dimen/btn_text_size_mid"
            android:text="@string/tv1"
            android:background="@android:color/white"
            android:textColor="@android:color/black">
        </TextView>

        <TextView
            android:id="@+id/tv_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_centerInParent="true"
            android:textSize="@dimen/btn_text_size_mid"
            android:text="@string/tv2"
            android:background="@android:color/white"
            android:textColor="@android:color/black">
        </TextView>

         <TextView
            android:id="@+id/tv_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tv_2"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin_min"
            android:textSize="@dimen/btn_text_size_mid"
            android:text="@string/tv3"
            android:background="@android:color/white"
            android:textColor="@android:color/black">
         </TextView>

        <TextView
            android:id="@+id/tv_item"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tv_3"
            android:layout_marginTop="@dimen/margin_min"
            android:layout_centerInParent="true"
            android:textSize="@dimen/btn_text_size_mid"
            android:text="@string/tv_item"
            android:background="@android:color/white"
            android:textColor="@android:color/black">
        </TextView>

    </RelativeLayout>

    <LinearLayout android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_layout_height"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:weightSum="6">
        <Button android:id="@+id/btn_blue"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/btn_blue"
            android:textSize="@dimen/btn_text_size_mid"
            android:layout_marginStart="@dimen/margin_edge"
            android:layout_gravity="center_vertical"
            android:onClick="onPress">

        </Button>

        <Button android:id="@+id/btn_red"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/btn_red"
            android:textSize="@dimen/btn_text_size_mid"
            android:layout_gravity="center_vertical"
            android:onClick="onPress">

        </Button>

        <Button android:id="@+id/btn_green"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/btn_green"
            android:textSize="@dimen/btn_text_size_mid"
            android:layout_marginEnd="@dimen/margin_edge"
            android:layout_gravity="center_vertical"
            android:onClick="onPress">

        </Button>
    </LinearLayout>

</RelativeLayout>

